Feat: add not supported mode

--- a/src/shared/assets/styles/variables.scss
+++ b/src/shared/assets/styles/variables.scss
@@ -1,5 +1,7 @@
 $color-primaty: #ffffff;
+$color-secondary: #1e293b;
 
 $bg-primary: #1e293b;
+$bg-secondary: #ffffff;
 
 $box-shadow: 0px 0px 16px 10px rgba(0, 0, 0, 0.2);
