Feat: add level's screens

--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -5,4 +5,8 @@ $name: "content";
     margin: 0;
     font-size: 20px;
     color: $color-secondary;
+
+    &--invert {
+        color: $color-primary;
+    }
 }
