--- a/src/components/title/title.scss
+++ b/src/components/title/title.scss
@@ -9,7 +9,7 @@ $name: 'title';
     &--h6 {
         line-height: 1;
         margin: 0;
-        color: $color-primaty;
+        color: $color-primary;
     }
 
     &--h1 {
