--- a/src/shared/assets/styles/index.scss
+++ b/src/shared/assets/styles/index.scss
@@ -3,7 +3,7 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    color: $color-primaty;
+    color: $color-primary;
     font-size: 1px;
 }
 
