--- a/src/shared/assets/styles/variables.scss
+++ b/src/shared/assets/styles/variables.scss
@@ -1,7 +1,8 @@
-$color-primaty: #ffffff;
+$color-primary: #ffffff;
 $color-secondary: #1e293b;
 
 $bg-primary: #1e293b;
 $bg-secondary: #ffffff;
+$bg-third: #03cd0d;
 
 $box-shadow: 0px 0px 16px 10px rgba(0, 0, 0, 0.2);
