--- a/src/shared/assets/styles/variables.scss
+++ b/src/shared/assets/styles/variables.scss
@@ -6,3 +6,5 @@ $bg-secondary: #ffffff;
 $bg-third: #03cd0d;
 
 $box-shadow: 0px 0px 16px 10px rgba(0, 0, 0, 0.2);
+$field-shadow: 5px 5px 3px 0px rgba(182, 182, 182, 1);
+$field-shadow-open: 5px 5px 3px 0px rgba(0, 112, 6, 1);
